dropshot/tests/fail/bad_channel12.stderr
error[E0271]: type mismatch resolving `<Result<String, Box<dyn Error + Send + Sync>> as TypeEq>::This == Result<(), Box<dyn Error + Send + Sync>>`
  --> tests/fail/bad_channel12.rs:17:6
   |
17 | ) -> Result<String, Box<dyn std::error::Error + Send + Sync + 'static>> {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<Result<String, Box<dyn Error + Send + Sync>> as TypeEq>::This == Result<(), Box<dyn Error + Send + Sync>>`
   |
note: expected this to be `Result<(), Box<(dyn std::error::Error + Send + Sync + 'static)>>`
  --> tests/fail/bad_channel12.rs:17:6
   |
17 | ) -> Result<String, Box<dyn std::error::Error + Send + Sync + 'static>> {
   |      ^^^^^^
   = note: expected enum `Result<(), _>`
              found enum `Result<String, _>`
note: required by a bound in `validate_result_type`
  --> tests/fail/bad_channel12.rs:17:6
   |
17 | ) -> Result<String, Box<dyn std::error::Error + Send + Sync + 'static>> {
   |      ^^^^^^ required by this bound in `validate_result_type`

error[E0271]: expected `{async block@$DIR/tests/fail/bad_channel12.rs:14:1: 14:6}` to be a future that resolves to `Result<(), Box<dyn Error + Send + Sync>>`, but it resolves to `Result<String, Box<dyn Error + Send + Sync>>`
  --> tests/fail/bad_channel12.rs:14:1
   |
14 | async fn bad_response_type(
   | ^^^^^ expected `Result<(), Box<...>>`, found `Result<String, Box<...>>`
   |
   = note: expected enum `Result<(), Box<(dyn std::error::Error + Send + Sync + 'static)>>`
              found enum `Result<String, Box<dyn std::error::Error + Send + Sync>>`
note: required by a bound in `WebsocketUpgrade::handle`
  --> src/websocket.rs
   |
   |     pub fn handle<C, F>(mut self, handler: C) -> WebsocketEndpointResult
   |            ------ required by a bound in this associated function
...
   |         F: Future<Output = WebsocketChannelResult> + Send + 'static,
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `WebsocketUpgrade::handle`
